--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.devtools.livereload.enabled=true
 spring.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/game
+spring.datasource.username=root
+spring.datasource.password=root1234!
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
