--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'mysql:mysql-connector-java'
+    runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
+	implementation 'org.hibernate:hibernate-spatial'
+	implementation 'org.springframework.boot:spring-boot-configuration-processor:2.6.7'
 }
 
 tasks.named('test') {
